fix equality; fix modal css spacing;

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -164,6 +164,7 @@
   padding-left: 50px;
   width: 70%;
   color: white;
+  line-height: 1.5;
 }
 
 .detailedInfo {
